--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .App {
   text-align: center;
 }
+.head {
+  background-color: #61dafb;
+  border-radius: 2px;
+  text-align: center;
+}
 
 .App-logo {
   height: 40vmin;
